<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- respuestas_de_la_empresa_al_cliente strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="vista_de_respuestas_string">Vista de respuestas</string>
	<string name="gmail_string">GMAIL</string>
	<string name="fecha_recibido_string">Fecha recibido</string>
	<string name="gmail_ek1_string">GMAIL</string>
	<string name="fecha_recibido_ek1_string">Fecha recibido</string>
	<string name="gmail_ek2_string">GMAIL</string>
	<string name="fecha_recibido_ek2_string">Fecha recibido</string>
	<string name="gmail_ek3_string">GMAIL</string>
	<string name="fecha_recibido_ek3_string">Fecha recibido</string>
	<string name="informacion_de_la_propuesta_string">Informacion de la propuesta</string>
	<string name="informacion_de_la_empresa_string">INFORMACION DE LA EMPRESA</string>
	<string name="informacion_del_empleo_string">INFORMACION DEL EMPLEO</string>
	<string name="propuesta_string">Propuesta</string>
	<string name="propuesta_ek1_string">Propuesta</string>
	<string name="propuesta_ek2_string">Propuesta</string>
	<string name="inicio_string">Inicio</string>
	<string name="__bienvenido__string">Bienvenido!</string>
	<string name="propuesta_ek3_string">Propuesta</string>
	<string name="registro_de_informaci_n_personal_del_solicitante_string">Registro de Informacin personal del solicitante</string>
	<string name="informacion_string">INFORMACION </string>
	<string name="nombre__apellido__direcci_n__correo__fecha_de_nacimiento__ciudad__etc_string">Nombre, apellido, direccin, correo, fecha de nacimiento, ciudad, etc</string>
	<string name="curriculum_vitae_string">CURRICULUM VITAE</string>
	<string name="solicitudes_string">Solicitudes</string>
	<string name="vista_solicitudes_string">VISTA SOLICITUDES</string>
	<string name="crud_de_ofertas_ek3_string">Crud de ofertas</string>
	<string name="ofertas_planteadas_string">OFERTAS PLANTEADAS</string>
	<string name="ofertas_planteadas_ek1_string">OFERTAS PLANTEADAS</string>
	<string name="informacion_de_las_ofertas_string">Informacion de las ofertas</string>
	<string name="informacion_de_las_ofertas_ek1_string">Informacion de las ofertas</string>
	<string name="informacion_de_las_ofertas_ek2_string">Informacion de las ofertas</string>
	<string name="nueva_oferta_string">Nueva oferta</string>
	<string name="informacion_de_las_ofertas_ek3_string">Informacion de las ofertas</string>
	<string name="informacion_de_las_ofertas_ek4_string">Informacion de las ofertas</string>
	<string name="informacion_de_las_ofertas_ek5_string">Informacion de las ofertas</string>
	<string name="informacion_de_las_ofertas_ek6_string">Informacion de las ofertas</string>
	<string name="informacion_de_las_ofertas_ek7_string">Informacion de las ofertas</string>
	<string name="crear_string">Crear</string>
	<string name="ofertas_propuestas_string">Ofertas propuestas</string>
	<string name="ofertas_planteadas_ek2_string">OFERTAS PLANTEADAS</string>
	<string name="ofertas_planteadas_ek3_string">OFERTAS PLANTEADAS</string>
	<string name="ofertas_planteadas_ek4_string">OFERTAS PLANTEADAS</string>
	<string name="login_string">LOGIN</string>
	<string name="password__string">Password:</string>
	<string name="user__string">User:</string>
	<string name="login_empresa_string">Login Empresa</string>
	<string name="______________string">************</string>
	<string name="mj2000_string">Mj2000</string>
	<string name="login_ek1_string">LOGIN</string>
	<string name="password__ek1_string">Password:</string>
	<string name="user__ek1_string">User:</string>
	<string name="login_usuario_string">Login Usuario</string>
	<string name="______________ek1_string">************</string>
	<string name="mj2000_ek1_string">Mj2000</string>
	<string name="registro_de_informaci_n_personal_de_la_empresa_string">Registro de Informacin personal de la empresa</string>
	<string name="informacion_ek1_string">INFORMACION </string>
	<string name="nombre__empresa__ubicacion_bla_bla_bla_string">Nombre, empresa, ubicacion bla bla bla</string>
	<string name="mas_informacion_de_la_empresa_string">mas informacion de la empresa</string>
	<string name="inicio_ek1_string">Inicio</string>
	<string name="__bienvenido__ek1_string">Bienvenido!</string>
	<string name="cliente_string">Cliente</string>
	<string name="empresa_string">EMPRESA</string>
	<string name="__bievenido__string">BIEVENIDO!</string>
</resources>