<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		respuestas_de_la_empresa_al_cliente
	 *	@date 		Friday 04th of November 2022 03:56:42 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/respuestas_de_la_empresa_al_cliente" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_respuestas_de_la_empresa_al_cliente_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__respuestas_de_la_empresa_al_cliente_ek2"
					android:background="@drawable/_bg__respuestas_de_la_empresa_al_cliente_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />

				<View   android:id="@+id/rectangle_3"
					android:background="@drawable/rectangle_3_shape"
					 android:layout_marginStart="41dp"
					android:layout_marginTop="237dp"
					android:layout_width="278dp"
					android:layout_height="69dp" />

				<TextView android:id="@+id/vista_de_respuestas"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="44sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="3dp"
					android:layout_marginTop="39dp"
					android:layout_width="367dp"
					android:layout_height="94dp"
					android:text="@string/vista_de_respuestas_string"
					 />

				<TextView android:id="@+id/gmail"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="83dp"
					android:layout_marginTop="259dp"
					android:layout_width="200dp"
					android:layout_height="42dp"
					android:text="@string/gmail_string"
					 />


				<RelativeLayout android:id="@+id/group_5"
					android:layout_marginTop="701dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_6"
						android:background="@drawable/rectangle_6_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="360dp"
						android:layout_height="99dp" />

					<ImageView android:id="@+id/_image_6"
						android:src="@drawable/_image_6"
						android:contentDescription="_image_6"
						 android:layout_marginStart="146dp"
						android:layout_marginTop="14dp"
						android:layout_width="68dp"
						android:layout_height="63dp" />

					<ImageView android:id="@+id/_avatar_1"
						android:src="@drawable/_avatar_1"
						android:contentDescription="_avatar_1"
						 android:layout_marginStart="13dp"
						android:layout_marginTop="17dp"
						android:layout_width="61dp"
						android:layout_height="64dp" />

					<ImageView android:id="@+id/image_5"
						android:src="@drawable/image_5"
						android:contentDescription="image_5"
						 android:layout_marginStart="263dp"
						android:layout_marginTop="17dp"
						android:layout_width="97.35dp"
						android:layout_height="64dp" />

				</RelativeLayout>

				<TextView android:id="@+id/fecha_recibido"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="49dp"
					android:layout_marginTop="225dp"
					android:layout_width="141dp"
					android:layout_height="32dp"
					android:text="@string/fecha_recibido_string"
					 />

				<View   android:id="@+id/rectangle_5"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="41dp"
					android:layout_marginTop="425dp"
					android:layout_width="278dp"
					android:layout_height="69dp" />

				<TextView android:id="@+id/gmail_ek1"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="83dp"
					android:layout_marginTop="447dp"
					android:layout_width="200dp"
					android:layout_height="42dp"
					android:text="@string/gmail_ek1_string"
					 />

				<TextView android:id="@+id/fecha_recibido_ek1"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="49dp"
					android:layout_marginTop="413dp"
					android:layout_width="141dp"
					android:layout_height="32dp"
					android:text="@string/fecha_recibido_ek1_string"
					 />

				<View   android:id="@+id/rectangle_6_ek1"
					android:background="@drawable/rectangle_6_ek1_shape"
					 android:layout_marginStart="34dp"
					android:layout_marginTop="519dp"
					android:layout_width="278dp"
					android:layout_height="69dp" />

				<TextView android:id="@+id/gmail_ek2"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="76dp"
					android:layout_marginTop="541dp"
					android:layout_width="200dp"
					android:layout_height="42dp"
					android:text="@string/gmail_ek2_string"
					 />

				<TextView android:id="@+id/fecha_recibido_ek2"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="42dp"
					android:layout_marginTop="507dp"
					android:layout_width="141dp"
					android:layout_height="32dp"
					android:text="@string/fecha_recibido_ek2_string"
					 />

				<View   android:id="@+id/rectangle_4"
					android:background="@drawable/rectangle_4_shape"
					 android:layout_marginStart="41dp"
					android:layout_marginTop="331dp"
					android:layout_width="278dp"
					android:layout_height="69dp" />

				<TextView android:id="@+id/gmail_ek3"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="83dp"
					android:layout_marginTop="353dp"
					android:layout_width="200dp"
					android:layout_height="42dp"
					android:text="@string/gmail_ek3_string"
					 />

				<TextView android:id="@+id/fecha_recibido_ek3"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="49dp"
					android:layout_marginTop="319dp"
					android:layout_width="141dp"
					android:layout_height="32dp"
					android:text="@string/fecha_recibido_ek3_string"
					 />

			</RelativeLayout>








		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>