<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		respuestas_de_la_empresa_al_cliente
	 *	@date 		Friday 04th of November 2022 03:56:42 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/pantalla_login_empresa" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >







			<RelativeLayout android:id="@+id/page_pantalla_login_empresa_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/__bg__pantalla_login_empresa_ek2"
					android:background="@drawable/__bg__pantalla_login_empresa_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />


				<RelativeLayout android:id="@+id/contenedorencabezado"
					android:layout_marginTop="-34dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/nombre_app"
						android:background="@drawable/nombre_app_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="360dp"
						android:layout_height="238dp" />

					<ImageView android:id="@+id/i__1__1"
						android:src="@drawable/i__1__1"
						android:contentDescription="i__1__1"
						 android:layout_marginStart="83dp"
						android:layout_marginTop="8dp"
						android:layout_width="193dp"
						android:layout_height="212dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/contenedorlogin"
					android:layout_marginTop="163dp"
					android:layout_marginStart="6dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/login_container"
						android:background="@drawable/login_container_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="348dp"
						android:layout_height="460dp" />


					<RelativeLayout android:id="@+id/btnlogin"
						android:layout_marginTop="368dp"
						android:layout_marginStart="106dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_1"
							android:background="@drawable/rectangle_1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="138dp"
							android:layout_height="41dp" />

						<TextView android:id="@+id/login"
							android:fontFamily="Inter"
							android:textStyle="bold"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="16sp"
							android:textColor="@color/login_color"
							android:layout_marginLeft="40dp"
							android:layout_marginTop="11dp"
							android:layout_width="63dp"
							android:layout_height="30dp"
							android:text="@string/login_string"
							 />

					</RelativeLayout>

					<TextView android:id="@+id/password_"
						android:fontFamily="Inter"
						android:textStyle="bold"
						android:textSize="18sp"
						android:textColor="@color/login_color"
						android:layout_marginLeft="24dp"
						android:layout_marginTop="247dp"
						android:layout_width="129dp"
						android:layout_height="42dp"
						android:text="@string/password__string"
						 />

					<TextView android:id="@+id/user_"
						android:fontFamily="Inter"
						android:textStyle="bold"
						android:textSize="18sp"
						android:textColor="@color/login_color"
						android:layout_marginLeft="24dp"
						android:layout_marginTop="143dp"
						android:layout_width="99dp"
						android:layout_height="30dp"
						android:text="@string/user__string"
						 />

					<TextView android:id="@+id/login_empresa"
						android:fontFamily="Inter"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="44sp"
						android:textColor="@color/login_color"
						android:layout_marginLeft="85dp"
						android:layout_marginTop="13dp"
						android:layout_width="213dp"
						android:layout_height="65dp"
						android:text="@string/login_empresa_string"
						 />

					<View   android:id="@+id/line_1"
						android:background="@drawable/line_1_shape"
						 android:layout_marginStart="25dp"
						android:layout_marginTop="197dp"
						android:layout_width="301dp"
						android:layout_height="1dp" />

					<View   android:id="@+id/line_2"
						android:background="@drawable/line_2_shape"
						 android:layout_marginStart="25dp"
						android:layout_marginTop="300dp"
						android:layout_width="301dp"
						android:layout_height="1dp" />

					<TextView android:id="@+id/_____________"
						android:fontFamily="Inter"
						android:textStyle="bold"
						android:alpha="0.5"
						 android:textColor="@color/vista_de_respuestas_color"
						android:layout_marginLeft="27dp"
						android:layout_marginTop="287dp"
						android:layout_width="170dp"
						android:layout_height="20dp"
						android:text="@string/______________string"
						 />

					<TextView android:id="@+id/mj2000"
						android:fontFamily="Inter"
						android:textStyle="bold"
						android:textColor="@color/vista_de_respuestas_color"
						android:layout_marginLeft="26dp"
						android:layout_marginTop="181dp"
						android:layout_width="171dp"
						android:layout_height="22dp"
						android:text="@string/mj2000_string"
						 />

				</RelativeLayout>

			</RelativeLayout>




		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>