<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		respuestas_de_la_empresa_al_cliente
	 *	@date 		Friday 04th of November 2022 03:56:42 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/visor_de_las_propuestas" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_visor_de_las_propuestas_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/__bg__visor_de_las_propuestas_ek2"
					android:background="@drawable/__bg__visor_de_las_propuestas_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />

				<View   android:id="@+id/rectangle_2"
					android:background="@drawable/rectangle_2_shape"
					 android:layout_marginStart="41dp"
					android:layout_marginTop="271dp"
					android:layout_width="278dp"
					android:layout_height="69dp" />

				<View   android:id="@+id/rectangle_3_ek2"
					android:background="@drawable/rectangle_3_ek2_shape"
					 android:layout_marginStart="41dp"
					android:layout_marginTop="362dp"
					android:layout_width="278dp"
					android:layout_height="69dp" />

				<View   android:id="@+id/rectangle_4_ek2"
					android:background="@drawable/rectangle_4_ek2_shape"
					 android:layout_marginStart="41dp"
					android:layout_marginTop="453dp"
					android:layout_width="278dp"
					android:layout_height="69dp" />

				<View   android:id="@+id/rectangle_6_ek3"
					android:background="@drawable/rectangle_6_ek3_shape"
					 android:layout_marginStart="41dp"
					android:layout_marginTop="544dp"
					android:layout_width="278dp"
					android:layout_height="69dp" />

				<TextView android:id="@+id/propuesta"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="88dp"
					android:layout_marginTop="388dp"
					android:layout_width="184dp"
					android:layout_height="33dp"
					android:text="@string/propuesta_string"
					 />

				<TextView android:id="@+id/propuesta_ek1"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="88dp"
					android:layout_marginTop="475dp"
					android:layout_width="184dp"
					android:layout_height="33dp"
					android:text="@string/propuesta_ek1_string"
					 />

				<TextView android:id="@+id/propuesta_ek2"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="88dp"
					android:layout_marginTop="566dp"
					android:layout_width="184dp"
					android:layout_height="33dp"
					android:text="@string/propuesta_ek2_string"
					 />

				<TextView android:id="@+id/inicio"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="24sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="87dp"
					android:layout_width="357dp"
					android:layout_height="80dp"
					android:text="@string/inicio_string"
					 />

				<TextView android:id="@+id/__bienvenido_"
					android:fontFamily="Inter"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="24sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="6dp"
					android:layout_marginTop="140dp"
					android:layout_width="357dp"
					android:layout_height="80dp"
					android:text="@string/__bienvenido__string"
					 />

				<TextView android:id="@+id/propuesta_ek3"
					android:fontFamily="Inter"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/vista_de_respuestas_color"
					android:layout_marginLeft="88dp"
					android:layout_marginTop="293dp"
					android:layout_width="184dp"
					android:layout_height="33dp"
					android:text="@string/propuesta_ek3_string"
					 />


				<RelativeLayout android:id="@+id/group_5_ek1"
					android:layout_marginTop="701dp"
					android:layout_marginStart="-4dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_6_ek4"
						android:background="@drawable/rectangle_6_ek4_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="360dp"
						android:layout_height="99dp" />

					<ImageView android:id="@+id/image_6_ek2"
						android:src="@drawable/image_6_ek2"
						android:contentDescription="image_6_ek2"
						 android:layout_marginStart="146dp"
						android:layout_marginTop="14dp"
						android:layout_width="68dp"
						android:layout_height="63dp" />

					<ImageView android:id="@+id/_avatar_1_ek2"
						android:src="@drawable/_avatar_1_ek2"
						android:contentDescription="_avatar_1_ek2"
						 android:layout_marginStart="13dp"
						android:layout_marginTop="17dp"
						android:layout_width="61dp"
						android:layout_height="64dp" />

					<ImageView android:id="@+id/_image_5_ek3"
						android:src="@drawable/_image_5_ek3"
						android:contentDescription="_image_5_ek3"
						 android:layout_marginStart="263dp"
						android:layout_marginTop="17dp"
						android:layout_width="97.35dp"
						android:layout_height="64dp" />

				</RelativeLayout>

			</RelativeLayout>








		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>